@@ -1,3 +1,8 @@
+2007-05-21  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gw/cairo-spec.scm: Lots of g-wrap muckiness to make things
+	work.
+
 2007-05-20  Andy Wingo  <wingo@pobox.com>
 
 	* package.ac: Define GUILE_CAIRO_CFLAGS, not CAIRO_CFLAGS.
